dataset1235/2025-2/1153765216/users/1937138466/executions/2814675586_2935826613.log
== SUBMISSION (2025-08-26 18:19:26)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(float(round(fahrenheit, 2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:18:23)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:18:00)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:20:22)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = float((9/5) * celsius + 32)
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = float((9/5) * celsius + 32)
                       ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:50)
-- CODE: 
celsius = float(input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
Informe a temperatura em Farenheit: 32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
Informe a temperatura em Farenheit: 428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
Informe a temperatura em Farenheit: 105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
Informe a temperatura em Farenheit: 50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
Informe a temperatura em Farenheit: 54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
Informe a temperatura em Farenheit: 104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:19:25)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(float(round(fahrenheit, 2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:18:00)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:17:58)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:25:36)
-- CODE: 
celsius = (input("Informe a temperatura em Farenheit: "))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
